# -Personal-Productivity-Manager-

./: .gitignore  CONTRIBUTING.md  README.md  productivity_manager.spec  prompt.md  pyproject.toml
.github/workflows/: ci.yml
productivity_manager/: __init__.py  main.py  requirements.txt
productivity_manager/data/: config.json  productivity.db
productivity_manager/database/: db_manager.py  models.py
productivity_manager/gui/: file_gui.py  main_window.py  monitor_gui.py  scraper_gui.py  theme.py  timer_gui.py  todo_gui.py
productivity_manager/modules/: file_organizer.py  system_monitor.py  time_tracker.py  todo_manager.py  web_scraper.py
productivity_manager/tests/: test_file_org.py  test_timer.py  test_todo.py
productivity_manager/utils/: config.py  constants.py  helpers.py
